--- a/indexstyle.css
+++ b/indexstyle.css
@@ -21,3 +21,18 @@ color:white;
 font-family:lucida;
 font-size:16px
 }
+li {
+color:white;
+font-family:lucida;
+font-size:16px
+}
+center {
+color:white;
+font-family:lucida;
+font-size:16px
+}
+sup {
+color:white;
+font-family:lucida;
+font-size:8px
+}
